--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,6 +1,7 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); */
+
 *{
     box-sizing: border-box;
     margin: 0;
