--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,115 +1,279 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
-
-/* @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); */
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    font-family: 'Inter', sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  /* font-variation-settings: wght 900; */
 }
 
-
-.main{
-    background-color: #edf4fe; 
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.main {
+  background-color: #edf4fe;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    background-color: #FFFFFF;
-    /* border: 2px solid black; */
-    text-align: center;
-    width: 55%;
-    height: 80vh;
-    backdrop-filter: blur(4px);
-    border-radius: 40px;
-    padding-top: 20px;
-    /* padding-bottom: 20px; */
-    font-family: 'Inter', sans-serif;
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  /* border: 2px solid black; */
+  text-align: center;
+  width: 55%;
+  height: 80vh;
+  backdrop-filter: blur(4px);
+  border-radius: 40px;
+  padding-top: 20px;
+  /* padding-bottom: 20px; */
+  font-family: "Inter", sans-serif;
 }
 
-.container, .title{
-    color: black;
-    line-height: 1.5;
-    font-size: 1.8rem;
-    letter-spacing: 0.045em;
-    font-weight: bolder;
-    /* text-transform: capitalize; */
+.container,
+.title {
+  color: black;
+  line-height: 1.5;
+  font-size: 1.8rem;
+  letter-spacing: 0.045em;
+
+  font-weight: bolder;
+  /* text-transform: capitalize; */
 }
 
-.add-btn{
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
+.add-btn {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
 }
-.new-btn1{
-    border-radius: 15px;
-    width: 100%;
-    height: 100%;
-    color: #FFFFFF;
+.new-btn1 {
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
 }
 
-
-.date1{
-    border-radius: 30px;
+.date1 {
+  border-radius: 30px;
 }
 
 .css-1t1j96h-MuiPaper-root-MuiDialog-paper {
-    width: 30%;
-    align-items: center;
-    justify-content: center;
-    /* border: 2px solid brown; */
-    border-radius: 10%;
+  width: 30%;
+  align-items: center;
+  justify-content: center;
+  /* border: 2px solid brown; */
+  border-radius: 10%;
 }
 
-
-#customized-dialog-title{
-    letter-spacing: 2px;
+#customized-dialog-title {
+  letter-spacing: 2px;
 }
 
-.statistics{
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    width: 90%;
-    height: 50vh;
-    margin-top: 40px;
-    /* border: 2px solid brown; */
-    padding: 10px 10px 10px 10px;
-    gap:10px;
-
+.statistics {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 90%;
+  height: 50vh;
+  margin-top: 40px;
+  /* border: 2px solid brown; */
+  padding: 10px 10px 10px 10px;
+  gap: 10px;
 }
 
 .duration {
-    
-    /* border: 2px solid yellow; */
-    width: 50%;
+  /* border: 2px solid yellow; */
+  width: 50%;
 }
 
-.stats{
-    /* border: 2px solid red; */
-    width: 50%;
+.stats {
+  /* border: 2px solid red; */
+  width: 50%;
 }
-.duration-title{
-    /* padding: 20px; */
-    margin:0;
-    /* text-align: start; */
-    font-size: 1.2rem;
+.duration-title {
+  /* padding: 20px; */
+  margin: 0;
+  /* text-align: start; */
+  font-size: 1.2rem;
 }
-.stats-title{
-    /* margin:0; */
-    /* text-align: start; */
-    font-size: 1.2rem;
+.stats-title {
+  /* margin:0; */
+  /* text-align: start; */
+  font-size: 1.2rem;
 }
-.duration-graph{
-    position: relative;
+.duration-graph {
+  /* border: 2px solid rgb(76, 0, 255); */
+  position: relative;
 }
-tspan{
-    font-size: 0.9rem;
+tspan {
+  font-size: 0.9rem;
 }
+
+.container-table {
+  position: relative;
+  margin-top: 0.2rem;
+  width: 100%;
+  height: 40vh;
+  /* border: 2px solid black; */
+}
+.main-table {
+  /* padding: 20px; */
+  width: 100%;
+  font-size: 0.8rem;
+  /* border-radius: 15px ; */
+  border-collapse: collapse;
+  /* border-spacing: 0; */
+}
+td {
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+td {
+  color: gray;
+}
+th,
+td {
+  padding: 8px;
+}
+
+ .main-table thead th,
+.main-table tbody tr:first-child th,
+.main-table tbody tr:first-child td:first-child {
+  background-color: transparent;
+} 
+
+.main-table tbody td:not(:first-child) { 
+    /* border-bottom-right-radius: 10px;   */
+    /* border-collapse: collapse; */
+    background-color: #e0e9f5;
+ }
+  
+
+
+
+  
+/* border radius */
+/* tr th:nth-child(1) {
+    border-radius: 10px 0 0 0;
+  }
+  
+  tr th:nth-last-child(1) {
+    border-radius: 0 10px 0 0;
+  }
+  
+  tr:nth-last-child(1) td:nth-child(1) {
+    border-radius: 0 0 0 10px;
+  }
+  
+  tr:nth-last-child(1) td:nth-last-child(1) {
+    border-radius: 0 0 10px 0;
+  }   */
+
+
+
+  /* tr th:nth-child(1) {
+    border-radius: 10px 0 0 0;
+  }
+  
+  tr th:nth-last-child(1) {
+    border-radius: 0 10px 0 0;
+  }
+  
+  tr:nth-last-child(1) td:nth-child(1) {
+    border-radius: 0 0 0 10px;
+  }
+  
+  tr:nth-last-child(1) td:nth-last-child(1) {
+    border-radius: 0 0 10px 0;
+  } */
+
+
+
+/* 
+  .main-table thead th:last-child,
+.main-table tbody tr:first-child th:last-child,
+.main-table tbody tr:first-child td:last-child {
+  border-top-right-radius: 20px;
+}
+
+.main-table tbody tr:last-child td:first-child {
+  border-top-left-radius: 20px;
+}
+
+.main-table tbody td:first-child {
+    border-top-left-radius: 20px;
+  }
+
+.main-table tbody tr:last-child td:last-child {
+    
+  border-bottom-right-radius: 20px;
+ 
+} */
+
+
+
+/* 
+.main-table thead th:first-child,
+.main-table tbody tr:first-child th:first-child,
+.main-table tbody tr:first-child td:first-child {
+  background-color: transparent;
+}
+
+.main-table thead th:nth-child(n+1),
+.main-table tbody tr:first-child th:nth-child(n+2),
+.main-table tbody tr:first-child  {
+  border-top-left-radius: 20px;
+}
+
+.main-table thead th:last-child,
+.main-table tbody tr:first-child th:last-child,
+.main-table tbody tr:first-child td:last-child {
+  border-top-right-radius: 20px;
+}
+
+.main-table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 20px;
+}
+
+.main-table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 20px;
+} 
+ */
+
+
+/* 
+
+ .main-table thead th:first-child,
+.main-table tbody tr:first-child th:first-child,
+.main-table tbody tr:first-child td:first-child {
+  background-color: transparent;
+}
+
+.main-table thead th:nth-child(n-1),
+.main-table tbody tr:first-child th:nth-child(1),
+.main-table tbody tr:first-child + tr td:nth-child(1) {
+  border-top-left-radius: 20px;
+}
+
+.main-table thead th:last-child,
+.main-table tbody tr:first-child th:last-child,
+.main-table tbody tr:first-child td:last-child {
+  border-top-right-radius: 20px;
+}
+
+.main-table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 20px;
+}
+
+.main-table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 20px;
+}
+
+.main-table tbody td:nth-child(n) {
+    /* border-top-left-radius: 20px; */
+  /* background-color: #e0e9f5; */
+/* }   */ 
+
+
